alignment issues

--- a/public/after_login/current_ui/css/style.css
+++ b/public/after_login/current_ui/css/style.css
@@ -7454,7 +7454,7 @@ margin-bottom: 25px;
 .learskill h3{
       font-size: 14px;
   font-weight: bold;
-  color: #1f1f1f;
+  color: #1f1f1f;margin-bottom:0px;
 }
 .persent_std {
   padding-bottom: 20px;
